# Calculadora

./: README.md  meson.build
src/: casos_switch.cpp  casos_switch.hpp  circulos.cpp  circulos.hpp  comprobador.cpp  comprobador.hpp  figuras_planas.cpp  figuras_planas.hpp  leer.txt  main.c  main.cpp  miscelanea.cpp  miscelanea.hpp  musica.h  reproductor.hpp
